added actions for animals

--- a/resources/settings.properties
+++ b/resources/settings.properties
@@ -1,5 +1,5 @@
-island.width = 100
-island.height = 20
-island.days = 10
+islandActionImplementation.width = 50
+islandActionImplementation.height = 10
+islandActionImplementation.days = 10
 
 animals.percentsToRemove = 20
